# autogradpp

./: .gitignore  CMakeLists.txt  README.md
examples/: CMakeLists.txt  and.cpp  basic.cpp  cora.cpp  handwriting.cpp  xor.cpp
include/: CMakeLists.txt
include/autogradpp/: autogradpp.hpp  mlp.hpp  node.hpp  operands.hpp  tensor.hpp
